--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
         </div>
       <div class="nav-var-card">
         <h1>Curso de Inglés Anericano</h1>
-        <img src="/img/logo.jpg">
+        <img src="logotipo.jpg">
         <p>David Lorenzo</p>
         <p>53106782</p>
       </div>
